# free-energy

./: .gitignore  .gitmodules  BLOG_WORKFLOW.md  README.md  bm-free-energy.code-workspace  pyproject.toml
docs/: foundational_takeaways.md  hopfield_equivalence.md  softmax_graveyard.md
docs/meetings/: 2026-06-09-free-energy-ebm.md
experiments/00_ar_pros_cons/: CLAIMS.md  README.md  VERIBENCH.md  run_on_snap.sh
experiments/10_ebt_vb/: README.md  RESULTS.md  ebt.py  pyproject.toml  train_ebt.py  veribench_embedding_dataloader.py  veribench_task.py
experiments/10_ebt_vb/alexiglad_EBT/: .gitignore  README.md  base_model_trainer.py  sample_lm_subset.py  sample_veribench_overfit.py  train_lm_subset.py  train_model.py  train_veribench_overfit.py
experiments/10_ebt_vb/alexiglad_EBT/data/img/: imagenet_dataloader.py
experiments/10_ebt_vb/alexiglad_EBT/data/nlp/: fineweb_dataloader.py
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/debug/: debug_code.sh  debug_code2.sh  debug_dataloader.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/img/inference/: dit_denoising.sh  ebt_denoising.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/img/pretrain_denoising/: dit.sh  ebt_s1.sh  ebt_s2.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/img/pretrain_t2i/: dit.sh  ebt_s1.sh  ebt_s2.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/nlp/inference/: baseline_transformer.sh  ebt.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/nlp/pretrain/: baseline_transformer.sh  ebt_s1.sh  ebt_s1_mn.sh  ebt_s2.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/vid/inference/: ebt_k400_vae.sh  ebt_ssv2_vae.sh
experiments/10_ebt_vb/alexiglad_EBT/job_scripts/vid/pretrain/: baseline_transformer_dino.sh  baseline_transformer_vae.sh  ebt_s1_dino.sh  ebt_s1_vae.sh  ebt_s2_vae.sh
experiments/10_ebt_vb/alexiglad_EBT/model/: ar_ebt_time_embed.py  model_utils.py
experiments/10_ebt_vb/alexiglad_EBT/model/nlp/: ebt.py  veribench_context_ebt.py
experiments/10_ebt_vb/configs/: train_config.yaml
experiments/10_ebt_vb/data/context_gold/: summary.json  vocab.json
experiments/10_ebt_vb/helper/: clean_context_gold_targets.py  convert_hidden_states_to_safetensors.py  evaluate_veribench_outputs_from_safetensors.py  sample_and_evaluate_ebt_val.py  validate_cleaned_lean_targets.py
experiments/10_ebt_vb/results/veribench_output_eval_workers32/: veribench_output_aggregate.csv  veribench_output_scores.csv
experiments/11_ebt_leandojo/: .gitignore  AGENTS.md  RESULTS.md  dataloader.py  ebt.py  lean_compile.py  lean_repl.py  leanworkbook_dataloader.py  leanworkbook_plus_benchmark.py  precompute_leanworkbook_hidden_states_sglang.py  precompute_states.py  pyproject.toml  run_goedel.py  run_goedel_leanworkbook_plus_sglang.py  train_ebt.py  write_missing_hidden_state_indices.py
experiments/11_ebt_leandojo/configs/: train_config.yaml
experiments/11_ebt_leandojo/data/: clean_leanworkbook_targets.py  validate_cleaned_lean_targets.py
experiments/11_ebt_leandojo/helpers/: __init__.py  benchmark.py  lean_repl.py  missing_states.py
experiments/11_ebt_leandojo/scripts/: launch_chunk_sweep.sh  launch_fair_chunk_sweep.sh  launch_fair_chunk_sweep_bs1.sh
paper_latex/: .gitignore  00_abstract.tex  01_introduction.tex  02_ar_advantages.tex  03_critiques_catalog.tex  04_what_holds.tex  04a_experimental_program.tex  05_ebm_motivation.tex  06_ebm_training.tex  07_ebm_inference.tex  08_other_alternatives.tex  09_conclusion.tex  97_acknowledgments.tex  98_appendix_open_questions.tex  98_appendix_proofs.tex  Makefile  README.md  main.tex  preamble.tex  refs.bib
questions/: README.md
(+481 files in other folders)
