[project]
name = "ebt-leandojo"
version = "0.1.0"
description = "FormalMATH benchmarking utilities and SGLang baselines."
requires-python = ">=3.11,<3.13"
dependencies = [
  "datasets>=2.20.0",
  "huggingface-hub>=0.33.0",
  "hydra-core>=1.3,<2",
  "jsonlines>=4.0.0",
  "numpy>=1.26",
  "omegaconf>=2.3,<3",
  "pexpect>=4.9.0",
  "safetensors>=0.4",
  "sglang>=0.4.8",
  "torch>=2.6.0",
  "tqdm>=4.67.0",
  "transformers>=4.51.0",
  "wandb>=0.17,<1",
]

[tool.uv]
package = false
